--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,16 +6,20 @@
   </head>
   <body>
     <h1>My first web page</h1>
-    <h2>Written under the guidance of Epicodus</h2>
+    <h2>Written under the guidance of <em>Epicodus</em></h2>
 
-    <p>This is my first web page!</p>
+    <p>This is <strong>my first web page!</strong></p>
     <p>Isn't it nice?</p>
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
       <li>html</li>
       <li>CSS</li>
       <li>JavaScript</li>
+      <img src="img/javascript.png" alt="Photo of Javascript shield">
       <li>And a lot more!</li>
     </ul>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things.</a></p>
+
+    <p>Check out <a href="http://www.epicodus.com/">Epicodus!</a>. It's a great school for learning web programming!
   </body>
 </html>
