--- a/favorite-things.html
+++ b/favorite-things.html
@@ -11,7 +11,9 @@
     <p>Here are some of my favorite people!</p>
     <ul>
       <li>My brother Christopher</li>
-      <li>My mom and dad
+      <img src="img/guy.jpg" alt="brother" />
+      <li>My mom and dad </li>
+      <img src="img/momanddad.png" alt="mom and dad" />
         <ul>
           <li>Steve</li>
           <li>Carol</li>
@@ -22,13 +24,21 @@
     </ul>
 
     <h3>Flavors of Ice Cream</h3>
+    <img src="img/ice-cream.jpg" alt="" />
     <p>These are my three favorites, in order:</p>
     <ol>
       <li>Pistachio</li>
       <li>Malted Milk chocolate</li>
       <li>Black Licorice (really!)</li>
     </ol>
-    
+
+    <h3>Websites</h3>
+    <p>These are my three favorites, in order:</p>
+    <ol>
+      <li><a href="http://www.youtube.com">Youtube</a></li>
+      <li><a href="http://www.google.com">Google</a></li>
+      <li><a href="http://reddit.com">Reddit</a></li>
+    </ol>
     <p>Thanks for reading about me!</p>
   </body>
 </html>
