add CSS to favorite places page

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -5,7 +5,7 @@
     <title>Favorite Places</title>
   </head>
   <body>
-    <h1>Favorite places to <em>visit:</em></h1>
+    <h1>Favorite Places to <em>Visit</em></h1>
     <ul>
       <li><a href="https://www.google.com/maps/place/Pittsburgh,+PA/@40.4314779,-80.0507114,12z/data=!3m1!4b1!4m5!3m4!1s0x8834f16f48068503:0x8df915a15aa21b34!8m2!3d40.4406248!4d-79.9958864">Pittsburgh</a></li>
       <img src="pic/PGH.jpg" alt="Pittsburgh" />
